[package]
name = "pause"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
signal-hook = "0.3.13"
signal-hook-registry = "1.4.0"
sc = "0.2.6"
