[package]
name = "pause"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "original"
path = "src/bin/original.rs"

[[bin]]
name = "nomain"
path = "src/bin/nomain.rs"

[[bin]]
name = "nocorefmt"
path = "src/bin/nocorefmt.rs"

[profile.strip]
inherits = "release"
strip = true

[profile.optz]
inherits = "strip"
opt-level = "z"

[profile.lto]
inherits = "optz"
lto = true

[profile.cgu]
inherits = "lto"
codegen-units = 1

[profile.panic]
inherits = "cgu"
panic = "abort"

[dependencies]
signal-hook = "0.3.13"
signal-hook-registry = "1.4.0"
sc = "0.2.6"
